add init script to Makefile

--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "bin-dir": "bin"
   },
   "autoload": {
-    "psr-4": { "MovieRecommendation\\" : "src/" }
+    "psr-4": { "AppTemplate\\" : "src/" }
   },
   "autoload-dev": {
-    "psr-4": { "MovieRecommendation\\Test\\" : "tests/" }
+    "psr-4": { "AppTemplate\\Test\\" : "tests/" }
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
