--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,8 @@ services:
     volumes:
       - ./:/app
     working_dir: /app
+    networks:
+      - app_template_network
+
+networks:
+  app_template_network:
